--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,15 +32,15 @@ lazy_static = "=1.4.0"
 ordered-float = "=1.0.2"
 ascii = "=1.0.0"
 permutohedron = "=0.2.4"
-superslice = "=1.0.0"
-itertools = "=0.9.0"
+# superslice = "=1.0.0"
+# itertools = "=0.9.0"
 itertools-num = "=0.1.3"
 maplit = "=1.0.2"
 either = "=1.5.3"
 im-rc = "=14.3.0"
 fixedbitset = "=0.2.0"
 bitset-fixed = "=0.1.0"
-proconio = { version = "=0.3.6", features = ["derive"] }
+# proconio = { version = "=0.3.6", features = ["derive"] }
 text_io = "=0.1.8"
 whiteread = "=0.5.0"
 rustc-hash = "=1.1.0"
