--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,5 +46,9 @@ whiteread = "=0.5.0"
 rustc-hash = "=1.1.0"
 smallvec = "=1.2.0"
 
+[features]
+local = []
+seed = []
+
 [profile.dev]
 opt-level = 3
